<resources>
    <string name="app_name">APP-Manu</string>

    <!-- Textos para la pantalla de registro -->
    <string name="hint_nombre">Introduce tu nombre</string>
    <string name="hint_correo">Introduce tu correo</string>
    <string name="hint_pass">Introduce tu contraseña</string>
    <string name="hint_pass_confirm">Confirma tu contraseña</string>
    <string name="checkbox_terminos">Acepto los términos y condiciones</string>
    <string name="btn_inicio">Inicio</string>
    <string name="btn_registrar">Registrar</string>
    <string name="btn_cancelar">Cancelar</string>

    <!-- Textos para la pantalla de bienvenida y perfil -->
    <string name="bienvenido">Bienvenido/a,</string>
    <string name="nombre">Nombre: </string>
    <string name="correo">Correo: </string>
    <string name="contraseña">Contraseña: </string>
    <string name="perfil">Perfil: </string>

    <!-- Descripciones de iconos -->
    <string name="email">Correo</string>
    <string name="password">Contraseña</string>

    <string-array name="perfiles">
        <item>Administrador</item>
        <item>Usuario</item>
    </string-array>

    <string name="test">test</string>
</resources>
