<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp">

    <!-- Imagen del logo -->
    <ImageView
        android:id="@+id/imageLogo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/logo"
        android:contentDescription="Logo de la app"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"/>

    <!-- Mensaje de bienvenida con el nombre del usuario -->
    <TextView
        android:id="@+id/textBienvenido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bienvenido"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_toEndOf="@id/imageLogo"
        android:layout_marginLeft="16dp"
        android:layout_alignTop="@id/imageLogo"
        android:textColor="#000000"/>

    <!-- Correo del usuario -->
    <TextView
        android:id="@+id/textCorreo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/correo"
        android:textSize="18sp"
        android:layout_toEndOf="@id/imageLogo"
        android:layout_marginLeft="16dp"
        android:layout_below="@id/textBienvenido"
        android:textColor="#000000"/>

    <!-- Tipo de usuario -->
    <TextView
        android:id="@+id/textPerfil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/perfil"
        android:textSize="18sp"
        android:layout_toEndOf="@id/imageLogo"
        android:layout_marginLeft="16dp"
        android:layout_below="@id/textCorreo"
        android:textColor="#000000"/>

    <!-- Contraseña del usuario -->
    <TextView
        android:id="@+id/textContrasena"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contraseña"
        android:textSize="18sp"
        android:layout_toEndOf="@id/imageLogo"
        android:layout_marginLeft="16dp"
        android:layout_below="@id/textPerfil"
        android:textColor="#000000"/>

    <!-- Contenedor para los botones -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="16dp"
        android:gravity="center">

        <!-- Botón Atrás -->
        <Button
            android:id="@+id/btnAtras"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_cancelar"
            android:layout_marginEnd="8dp" />

        <!-- Botón Continuar -->
        <Button
            android:id="@+id/btnContinuar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_inicio" />
    </LinearLayout>

</RelativeLayout>
